# Autonomous-Multi-Agent-AI-Organization

./: .editorconfig  .env.example  .env.local.example  .env.prod.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .pyre_configuration  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOY.md  Dockerfile  Dockerfile.agent  Dockerfile.orchestrator  HIVE_ENGINEERING_ROADMAP.md  LICENSE  Makefile  Proximus_learning_roadmap.md  README.md  SAAS_BUDGET_ROADMAP.md  SECURITY.md  SETUP.md  architecture.md  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  check_routes.py  dashboard_build_log.txt  dashboard_build_log_v2.txt  dashboard_build_log_v3.txt  desktop_nova.py  dev.sh  diagnose_keys.py  docker-compose.aws-local.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  (+18 more)
.agent/workflows/: run_system.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy-oracle.yml  deploy.yaml  frontend-ci.yml  go-ci.yml  python-ci.yml  rust-ci.yml
.zed/: settings.json  tasks.json
agents/: __init__.py  agent_service.py  backend_agent.py  base_agent.py  ceo_agent.py  compute_monitor_agent.py  cto_agent.py  devops_agent.py  engineer_agent.py  events.py  finance_agent.py  frontend_agent.py  implementation_specialist_agent.py  lead_researcher_agent.py  math_architect_agent.py  memory.py  model_registry.py  peer_reviewer_agent.py  qa_agent.py  reasoning.py  reproducibility_engineer_agent.py  research_intelligence.py  roles.py  schemas.py  visual_insights_agent.py
agents/prompts/: _shared_critique.yaml  backend_codegen.yaml  ceo_strategy.yaml  cto_architecture.yaml  devops_infra.yaml  finance_analysis.yaml  frontend_codegen.yaml  math_architect.yaml  qa_test_gen.yaml  research_intelligence.yaml
agents_service/: mock_llm.py  requirements.txt  worker.py
agents_service/api/: main.py  swarm_worker.py
api/: __init__.py  main.py
dashboard/: .env.local.example  .eslintrc.json  Dockerfile  auth.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  types.d.ts  vercel.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/chat/: page.tsx
dashboard/app/dashboard/: page.tsx
dashboard/app/observability/: page.tsx
dashboard/app/preview/[id]/: page.tsx
dashboard/app/settings/: page.tsx
dashboard/components/: AgentFeed.tsx  CostMeter.tsx  DagViewer.tsx  ErrorBoundary.tsx  InterventionModal.tsx  MetricsPanel.tsx
dashboard/hooks/: useWebSocket.ts
dashboard/lib/: api.ts
deliverables/6bfd4e1b-cc1e-45ed-8b91-c896e0085746/infrastructure/scripts/: rollback.sh
deliverables/6bfd4e1b-cc1e-45ed-8b91-c896e0085746/infrastructure/terraform/: variables.tf
deliverables/6bfd4e1b-cc1e-45ed-8b91-c896e0085746/tests/: test_auth.py  test_health.py
deliverables/c4593f94-a860-49fd-a12c-799e72f7e475/infrastructure/terraform/: alb.tf  cloudwatch.tf
deliverables/f096bf9c-af3c-40ad-be3f-2f5fd82a4b21/infrastructure/: docker-compose.yml
deliverables/f096bf9c-af3c-40ad-be3f-2f5fd82a4b21/tests/: conftest.py  test_security.py
deliverables/f99f031c-397e-4eed-86aa-98f65da8cb3e/: pyproject.toml
deliverables/f99f031c-397e-4eed-86aa-98f65da8cb3e/tests/: conftest.py  test_auth.py  test_items.py
deploy/railway/: Dockerfile.kafka
docs/: API_REFERENCE.md  DESKTOP_MASTERY.md  DEVELOPER_HUB.md  ENTERPRISE_SAS_GUIDE.md  PRIORITIES.md
docs/agents/: README.md
docs/infrastructure/: README.md
docs/messaging/: README.md
docs/orchestrator/: README.md
docs/tools/: README.md
gateway/: Dockerfile  go.mod  go.sum  main.go
gateway/cmd/gateway/: main.go
go-backend/: Makefile  coverage.out  go.mod  go.sum  test_output.txt
go-backend/cmd/gateway/: main.go
go-backend/cmd/orchestrator/: main.go
go-backend/cmd/proxy/: main.go
go-backend/cmd/ws-hub/: main.go
go-backend/deploy/: docker-compose.local.yml  docker-compose.yml
go-backend/deploy/dockerfiles/: Dockerfile.gateway  Dockerfile.orchestrator  Dockerfile.proxy  Dockerfile.ws-hub
go-backend/internal/health/: orchestrator.go
go-backend/internal/mcp/: server.go
go-backend/internal/orchestrator/dag/: dag.go  (+1 more)
go-backend/internal/proxy/: egress.go
go-backend/migrations/: 001_init.down.sql  001_init.up.sql  003_user_auth.down.sql  003_user_auth.up.sql  004_projects_name.down.sql  004_projects_name.up.sql  006_task_versioning.down.sql  006_task_versioning.up.sql
go-backend/proto/: orchestrator.proto  tenant.proto
infra/helm/ai-org/: values.yaml
infrastructure/postgres/: init.sql
k8s/agents/: ceo-agent.yaml
messaging/: __init__.py  kafka_client.py  schemas.py  topics.py
moe/: __init__.py  expert_registry.py  http_client.py  router.py  scoring.py
moe-scoring/: Cargo.toml  Dockerfile
moe-scoring/src/: main.rs  metrics.rs  models.rs  scorer.rs  vectorizer.rs
monitoring/grafana/dashboards/: default.json
monitoring/prometheus/: prometheus.yml
observability/: __init__.py  health.py  metrics.py  tracing.py
orchestrator/: __init__.py  kafka_dispatcher.py  planner.py  task_graph.py
orchestrator/memory/: __init__.py  artifacts_store.py  checkpointing.py  cost_ledger.py  decision_log.py  project_memory.py
scripts/: check_services.sh  create_prs.sh
security-check/: Cargo.toml
security-check/src/: main.rs  scrubber.rs  validator.rs
tests/: conftest.py
tests/integration/: test_full_lifecycle.py  test_kafka_consumer.py  test_orchestrator.py
tests/unit/: test_api_main.py  test_api_production.py  test_base_agent.py  test_ceo_agent.py  test_cost_ledger.py  test_cto_agent.py  test_decision_log.py  test_events_schemas.py  test_file_edit_tool.py  test_messaging_schemas.py  test_moe_scoring.py  test_orchestrator_planner.py  test_reasoning_chain.py  test_task_graph.py  test_task_graph_production.py
tools/: __init__.py  base_tool.py  browser_tool.py  collaboration_tool.py  docker_sandbox.py  file_edit_tool.py  git_tool.py  linter_tool.py  skills_registry.py
utils/: __init__.py  logging_config.py
(+49 files in other folders)
