[package]
name        = "moe-scoring"
version     = "1.0.0"
edition     = "2021"
description = "AI Organization — Mixture of Experts routing & scoring HTTP service"
authors     = ["AI Org Team"]
license     = "MIT"

[[bin]]
name = "moe-scoring"
path = "src/main.rs"

[dependencies]
# HTTP server
axum            = { version = "0.7",  features = ["json", "macros"] }
tokio           = { version = "1",    features = ["full"] }
tower           = { version = "0.4" }
tower-http      = { version = "0.5",  features = ["cors", "trace"] }

# Serialization
serde           = { version = "1",    features = ["derive"] }
serde_json      = "1"

# Observability
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus      = { version = "0.13", features = ["process"] }

# Utilities
uuid            = { version = "1",    features = ["v4"] }
chrono          = { version = "0.4",  features = ["serde"] }
thiserror       = "1"
once_cell       = "1"
futures         = "0.3"
moka            = { version = "0.12", features = ["future"] }
aws-config = "1.8.15"
aws-sdk-bedrockruntime = "1.127.0"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true      # Strip debug symbols for smaller binary
panic         = "abort"   # Smaller binary, faster

[profile.dev]
opt-level = 1             # Faster builds in dev
