[package]
name = "security-check"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"
rustpython-parser = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
tokio = { version = "1.36", features = ["full"] }
tonic = "0.11"
prost = "0.12"

[build-dependencies]
tonic-build = "0.11"
